# brush_flow

./: .env.example  .gitignore  Dockerfile  README.md  TECHNICAL_DESIGN.md  USAGE_GUIDE.md  docker-compose.yml  run_local.bat
.claude/: settings.local.json
backend/: pyproject.toml  requirements.txt
backend/app/: cli.py  config.py  constants.py  database.py  main.py
backend/app/models/: base.py  enums.py  flow_log.py  iptv_channel.py  iptv_source.py  iptv_task.py  link.py  settings_model.py  task.py  task_log.py
backend/app/routers/: crud_helpers.py  flow.py  iptv.py  links.py  settings.py  tasks.py
backend/app/schemas/: flow.py  iptv.py  link.py  settings.py  task.py
backend/app/services/: base_runner.py  download_engine.py  flow_tracker.py  hls_downloader.py  iptv_engine.py  link_registry.py  m3u_parser.py  scheduler.py  task_logger.py
backend/app/static/: iptv_test.html
backend/app/utils/: format.py  humanize.py  limiter.py  traffic.py  validators.py
docs/: TECHNICAL_DESIGN.md  USAGE_GUIDE.md  hlsjs-reference.md  iptv-flowchart.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  index.ts
frontend/src/components/: CronScheduleInput.tsx  FlowChart.tsx  ScheduleCollapse.tsx  TaskLogDrawer.tsx
frontend/src/hooks/: usePolling.ts  useTaskActions.ts  useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  FlowHistory.tsx  IPTV.tsx  Links.tsx  Settings.tsx  Tasks.tsx
frontend/src/types/: task.ts
frontend/src/utils/: format.ts  taskConstants.ts
