[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DDGG", email = "ddcatgg@gmail.com" }
]
requires-python = "==3.11.*"
dependencies = [
    "aiohttp==3.10.11",
    "aiosqlite==0.21.0",
    "apscheduler==3.11.0",
    "fastapi==0.115.12",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
    "sqlalchemy==2.0.41",
    "uvicorn[standard]==0.34.2",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
